test/files/neg/t4460c.scala
class B(val x: Int) {
  self: A =>

  def this(a: String) = this()
}

class A()
